# mery-tts

./: .gitignore  AGENTS.md  INSTALL_FOR_AGENTS.md  LICENSE  Makefile  README.md  justfile  pyproject.toml  skills-lock.json
.github/workflows/: check.yml
.scratch/_tools/: fix_evidence_sections.py  mark_issues_complete.py
.scratch/adr-0001-product-boundary/: INDEX.md
.scratch/adr-0002-helper-shape/: INDEX.md
.scratch/adr-0003-python-runtime/: INDEX.md
.scratch/adr-0004-engine-strategy/: INDEX.md
.scratch/adr-0005-api-protocol/: INDEX.md
.scratch/adr-0006-security-model/: INDEX.md
.scratch/adr-0007-catalog-integrity/: INDEX.md
.scratch/adr-0008-packaging/: INDEX.md
.scratch/adr-0009-pairing-flow/: INDEX.md
.scratch/adr-0010-error-taxonomy/: INDEX.md
.scratch/adr-0011-storage-architecture/: 01-implement-storage-management-cli.md
.scratch/adr-0012-audio-delivery-mode/: INDEX.md
.scratch/adr-0013-voice-descriptor-discriminated-union/: INDEX.md
.scratch/adr-0014-openai-compatible-speech-layer/: INDEX.md
.scratch/adr-0015-catalog-model-artifact-voice-identity/: INDEX.md
.scratch/adr-0016-install-job-lifecycle/: INDEX.md
.scratch/adr-0017-pcm-streaming-protocol/: INDEX.md
.scratch/adr-0018-provider-rollout-strategy/: INDEX.md
.scratch/adr-0019-provider-adapter-taxonomy/: INDEX.md
.scratch/adr-0020-web-console-architecture/: INDEX.md
.scratch/adr-0021-local-zam-reader-usable-milestone/: INDEX.md
.scratch/adr-0022-provider-fallback-and-synthesis-orchestration/: INDEX.md
.scratch/adr-0023-model-install-and-artifact-source-architecture/: INDEX.md
.scratch/adr-0024-installed-voice-resolution-and-runtime-caching/: INDEX.md
.scratch/adr-0025-readiness-health-smoke-and-zam-reader-gating/: INDEX.md
.scratch/adr-0031-streaming-module-architecture/: INDEX.md
.scratch/adr-0032-pcm-chunk-streaming-contract/: INDEX.md
.scratch/adr-0033-streaming-cancellation-and-backpressure/: INDEX.md
.scratch/adr-0034-openai-streaming-http-semantics/: INDEX.md
.scratch/adr-0035-streaming-capability-and-provider-scope/: INDEX.md
.scratch/adr-0037-core-runtime-contract/: INDEX.md
.scratch/adr-0038-react-console-ai-agent-contract/: INDEX.md
.scratch/adr-0039-locale-and-language-contract/: INDEX.md
.scratch/adr-0040-governance-and-voice-provenance/: INDEX.md
.scratch/adr-0041-operations-observability-and-diagnostics-history/: INDEX.md
.scratch/adr-0042-hardware-backend-policy/: INDEX.md
.scratch/adr-0043-security-privacy-and-audit/: INDEX.md
.scratch/adr-0044-release-update-and-storage-lifecycle/: INDEX.md
.scratch/adr-0045-runtime-resource-policy/: INDEX.md
.scratch/adr-0046-docs-help-and-adr-acceptance-process/: INDEX.md
.scratch/adr-0048-dependable-local-tts-appliance/: INDEX.md  PRD.md
.scratch/adr-0049-local-modern-provider-admission-policy/: INDEX.md  PRD.md
.scratch/adr-0050-guided-next-command-suggestions/: INDEX.md
.scratch/interactive-cli-launcher/: INDEX.md
.scratch/package-smoke-dry-run/: package-smoke-result.json
.scratch/piper-real-voice-smoke/: piper-real-voice-smoke-result.json
.scratch/piper-real-voice-smoke-dry-run/: piper-real-voice-smoke-result.json
.scratch/web-console-design-token-tailwind-artifact/: INDEX.md  PRD.md
.scratch/web-console-runtime-control-plane/: INDEX.md  PRD.md
docs/: README.md  use-cases.md  zam-reader-context.md
docs/adr/: ADR-0001-product-boundary.md  ADR-0002-helper-shape.md  ADR-0003-python-runtime.md  ADR-0004-engine-strategy.md  ADR-0005-api-protocol.md  ADR-0006-security-model.md  ADR-0007-catalog-integrity.md  ADR-0008-packaging.md  ADR-0009-pairing-flow.md  ADR-0010-error-taxonomy.md  ADR-0011-storage-architecture.md  ADR-0012-audio-delivery-mode.md  ADR-0013-voice-descriptor-discriminated-union.md  ADR-0014-openai-compatible-speech-layer.md  ADR-0015-catalog-model-artifact-voice-identity.md  ADR-0016-install-job-lifecycle.md  ADR-0017-pcm-streaming-protocol.md  ADR-0018-provider-rollout-strategy.md  ADR-0019-provider-adapter-taxonomy.md  ADR-0020-web-console-architecture.md  ADR-0021-local-zam-reader-usable-milestone.md  ADR-0022-provider-fallback-and-synthesis-orchestration.md  ADR-0023-model-install-and-artifact-source-architecture.md  ADR-0024-installed-voice-resolution-and-runtime-caching.md  ADR-0025-readiness-health-smoke-and-zam-reader-gating.md  ADR-0026-standalone-setup-boundary.md  ADR-0027-voice-pack-install-graph.md  ADR-0028-tiered-provider-installer.md  ADR-0029-api-first-setup-orchestration.md  ADR-0030-zam-reader-guided-setup-handoff.md  ADR-0031-streaming-module-architecture.md  ADR-0032-pcm-chunk-streaming-contract.md  ADR-0033-streaming-cancellation-and-backpressure.md  ADR-0034-openai-streaming-http-semantics.md  ADR-0035-streaming-capability-and-provider-scope.md  ADR-0036-annotated-synthesis-word-marks.md  ADR-0037-core-runtime-contract.md  ADR-0038-react-console-ai-agent-contract.md  ADR-0039-locale-and-language-contract.md  ADR-0040-governance-and-voice-provenance.md  (+20 more)
docs/agents/: adr-promotion-workflow.md  adr-status-rules.md  definition-of-done.md
docs/architecture/: ARCHITECTURE.md  core-runtime-contract.md
docs/codebase/: FOLDER_STRUCTURE.md  TECH_STACK.md
docs/console/: DESIGN.md  README.md
docs/integration/: api-reference.md  client-boundary-and-readiness-policy.md  client-quickstart.md  future-direct-install-permissions.md  integration-testing-guide.md  openai-streaming.md  setup-integration-guide.md  zam-reader-readiness-contract.md  zam-reader-readiness-polling-policy.md
docs/providers/: adapter-taxonomy.md  admission-policy.md
docs/reports/: adr-0048-p1-release-gate.md  appliance-runtime-safety-policy.md  capability-readiness-contract.md  language-capability-contract.md  launcher-secure-pairing-ux.md  launcher-session-server-management.md  local-tts-helper-design-decisions.md  local-tts-solutions-research.md  package-install-appliance-smoke.md  phase-1-smoke-and-tests.md  piper-real-voice-readiness-smoke.md  readiness-recovery-actions.md  sherpa-onnx-analysis.md  zam-reader-tts-feature-exploration.md  (+1 more)
tools/: __init__.py
(+583 files in other folders)
