[project]
name = "mery-tts-server"
version = "0.1.0"
description = "Standalone local TTS server — offline-first, any-client, localhost API"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.12"
authors = [{ name = "maemreyo" }]
keywords = ["tts", "text-to-speech", "local", "offline", "piper", "kokoro", "speech-synthesis", "voice", "localhost"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
  # API server
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  # Schema validation
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  # CLI
  "typer>=0.13",
  "rich>=13",
  # Structured logging
  "structlog>=24.4",
  # HTTP client (catalog downloads)
  "httpx>=0.27",
  # OS-correct app data paths
  "platformdirs>=4.3",
  # Audio (CLI playback)
  "sounddevice>=0.4",
  "soundfile>=0.12",
  "numpy>=1.26",
  # Async primitives
  "anyio>=4.6",
]

[project.optional-dependencies]
# Engine adapters — install per need
piper-plus = ["piper-plus[inference]>=1.0"]
kokoro     = ["kokoro-onnx>=0.4", "onnxruntime>=1.16"]
all        = ["mery-tts-server[piper-plus,kokoro]"]

# Development toolchain
dev = [
  "ruff>=0.7",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-httpx>=0.32",
  "respx>=0.21",
  "coverage[toml]>=7.6",
]

[project.scripts]
mery = "mery_tts.cli.main:app"

# Engine adapters register here — EngineRegistry discovers them at startup
# via importlib.metadata.entry_points(group="mery_tts.engines").
# To add a new engine: new subdirectory + one line here. EngineRegistry never changes.
[project.entry-points."mery_tts.engines"]
piper-plus = "mery_tts.engines.piper_plus.adapter:PiperPlusAdapter"
kokoro     = "mery_tts.engines.kokoro.adapter:KokoroAdapter"

[project.urls]
Repository = "https://github.com/maemreyo/mery-tts"
Issues     = "https://github.com/maemreyo/mery-tts/issues"

# ---------------------------------------------------------------------------
# Build
# ---------------------------------------------------------------------------
[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mery_tts"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.scratch",
  "/.omo",
  "/.mery-tts",
  "/models",
  "/cache",
  "/logs",
  "/diagnostics",
]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py312"
src            = ["src"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle + pyflakes
  "I",              # isort
  "UP",             # pyupgrade
  "B",              # flake8-bugbear
  "C4",             # flake8-comprehensions
  "SIM",            # flake8-simplify
  "ANN",            # flake8-annotations
  "S",              # flake8-bandit (security)
  "RUF",            # Ruff-specific rules
]
ignore = [
  "S101",    # assert in tests is fine (see per-file-ignores)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "S105", "S106", "S108"]  # test files don't need full type annotation
"src/mery_tts/errors/taxonomy.py" = ["S105"]  # stable machine-readable auth error codes, not secrets

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
strict             = true
python_version     = "3.12"
files              = ["src/mery_tts"]
plugins            = ["pydantic.mypy"]
exclude            = ["tests/"]

[[tool.mypy.overrides]]
module          = ["sounddevice.*", "soundfile.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
pythonpath   = ["src", "tests"]
addopts      = "-ra --tb=short"
markers      = [
  "unit: fast tests for isolated package units",
  "contract: API and schema contract tests using local fakes",
  "cli: command-line interface tests that avoid real engine downloads",
  "engine: tests that require a real engine binary/package installed (skip with -m 'not engine')",
  "integration: tests that start a real server or may trigger model downloads",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source  = ["mery_tts"]
branch  = true
omit    = [
  "src/mery_tts/__main__.py",
  "src/mery_tts/cli/*",         # CLI tested separately via subprocess
]

[tool.coverage.report]
show_missing    = true
skip_covered    = false
exclude_lines   = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "raise NotImplementedError",
  "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
]
